"""Bounded safetensors indexing and checkpoint-to-buffer loading."""

load("//bazel:rust.bzl", "nml_rust_library", "nml_rust_test")

_DEPS = [
    "//crates/nml-ir:nml_ir",
    "//crates/nml-runtime:nml_runtime",
    "//crates/nml-tensor:nml_tensor",
    "//crates/nml-types:nml_types",
    "@rust_crates//safetensors",
    "@rust_crates//serde",
    "@rust_crates//serde_json",
]

nml_rust_library(
    name = "nml_checkpoint",
    srcs = ["src/lib.rs"],
    crate_root = "src/lib.rs",
    deps = _DEPS,
    visibility = ["//crates:__subpackages__"],
)

nml_rust_test(
    name = "loader_accounting_contract_test",
    srcs = ["src/lib.rs"],
    crate_root = "src/lib.rs",
    deps = _DEPS,
)

nml_rust_test(
    name = "safetensors_contract_test",
    srcs = ["tests/safetensors_contract.rs"],
    crate_root = "tests/safetensors_contract.rs",
    deps = [
        ":nml_checkpoint",
        "//crates/nml-types:nml_types",
        "@rust_crates//safetensors",
        "@rust_crates//serde_json",
    ],
)
