"""Typed symbolic graph construction for NML programs."""

load("//bazel:rust.bzl", "nml_rust_library", "nml_rust_test")

nml_rust_library(
    name = "nml_ir",
    srcs = [
        "src/attention_backend.rs",
        "src/attention_sink.rs",
        "src/device_capabilities.rs",
        "src/lib.rs",
        "src/moe_backend.rs",
        "src/nvfp4_backend.rs",
        "src/ordinary_attention.rs",
        "src/paged_attention.rs",
    ],
    crate_root = "src/lib.rs",
    deps = [
        "//crates/nml-kernel-triton:nml_kernel_triton",
        "//crates/nml-mlir:nml_mlir",
        "//crates/nml-parameter:nml_parameter",
        "//crates/nml-sharding:nml_sharding",
        "//crates/nml-tensor:nml_tensor",
        "//crates/nml-types:nml_types",
    ],
    visibility = [
        "//:__pkg__",
        "//crates:__subpackages__",
    ],
)

nml_rust_test(
    name = "ir_contract_test",
    size = "small",
    srcs = ["tests/ir_contract.rs"],
    crate_root = "tests/ir_contract.rs",
    deps = [
        ":nml_ir",
        "//crates/nml-mlir:nml_mlir",
        "//crates/nml-parameter:nml_parameter",
        "//crates/nml-sharding:nml_sharding",
        "//crates/nml-tensor:nml_tensor",
        "//crates/nml-types:nml_types",
    ],
)
