"""Portable CPU semantics for NML's closed NVFP4 representation."""

load("//bazel:rust.bzl", "nml_rust_library", "nml_rust_test")
load("@rules_cuda//cuda:defs.bzl", "cuda_library")

cuda_library(
    name = "turing_adapter",
    srcs = ["src/turing_adapter.cu"],
    hdrs = ["include/nml_nvfp4.h"],
    alwayslink = True,
    archs = ["compute_75:sm_75"],
    copts = [
        "-O3",
        "-allow-unsupported-compiler",
    ],
    includes = ["include"],
    deps = ["@cuda//:cuda_runtime"],
    features = ["-static_link_cpp_runtimes"],
    target_compatible_with = select({
        "//platforms:cuda.enabled": ["@platforms//os:linux"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//crates:__subpackages__"],
)

nml_rust_library(
    name = "nml_kernel_nvfp4",
    srcs = [
        "src/cuda.rs",
        "src/ffi.rs",
        "src/lib.rs",
        "src/x86.rs",
    ],
    crate_root = "src/lib.rs",
    rustc_flags = select({
        "//platforms:cuda.enabled": [
            "--cfg=nml_cuda",
            "--check-cfg=cfg(nml_cuda)",
        ],
        "//conditions:default": ["--check-cfg=cfg(nml_cuda)"],
    }),
    deps = [
        "//crates/nml-parameter:nml_parameter",
        "//crates/nml-pjrt:nml_pjrt",
        "//crates/nml-pjrt-sys:nml_pjrt_sys",
        "//crates/nml-types:nml_types",
    ],
    link_deps = select({
        "//platforms:cuda.enabled": [":turing_adapter"],
        "//conditions:default": [],
    }),
    visibility = ["//crates:__subpackages__"],
)

nml_rust_test(
    name = "nvfp4_cpu_contract_test",
    srcs = ["tests/cpu_contract.rs"],
    crate_root = "tests/cpu_contract.rs",
    data = ["//artifacts/gpt-oss-20b-nvfp4:execution_fixture"],
    deps = [
        ":nml_kernel_nvfp4",
        "@rust_crates//serde",
        "@rust_crates//serde_json",
        "@rust_crates//sha2",
        "//crates/nml-parameter:nml_parameter",
        "//crates/nml-types:nml_types",
    ],
)
