"""Logical parameter representations and their physical component contracts."""

load("//bazel:rust.bzl", "nml_rust_library", "nml_rust_test")

nml_rust_library(
    name = "nml_parameter",
    srcs = ["src/lib.rs"],
    crate_root = "src/lib.rs",
    deps = [
        "//crates/nml-sharding:nml_sharding",
        "//crates/nml-types:nml_types",
    ],
    visibility = ["//crates:__subpackages__"],
)

nml_rust_test(
    name = "parameter_contract_test",
    srcs = ["tests/parameter_contract.rs"],
    crate_root = "tests/parameter_contract.rs",
    deps = [
        ":nml_parameter",
        "//crates/nml-sharding:nml_sharding",
        "//crates/nml-types:nml_types",
    ],
)
