"""CUDA-specific PJRT runtime initialization and client policy."""

load("//bazel:rust.bzl", "nml_rust_library", "nml_rust_test")

_CUDA_ENABLED_ENV = select({
    "//platforms:cuda.enabled": {"NML_CUDA_ENABLED": "1"},
    "//conditions:default": {"NML_CUDA_ENABLED": "0"},
})

nml_rust_library(
    name = "nml_pjrt_cuda",
    srcs = ["src/lib.rs"],
    crate_root = "src/lib.rs",
    rustc_env = _CUDA_ENABLED_ENV,
    deps = [
        "//crates/nml-pjrt:nml_pjrt",
        "@rules_rust//rust/runfiles",
    ],
    target_compatible_with = ["@platforms//os:linux"],
    visibility = [
        "//:__pkg__",
        "//crates:__subpackages__",
    ],
)

nml_rust_test(
    name = "cuda_package_contract_test",
    size = "small",
    srcs = ["tests/package_contract.rs"],
    crate_root = "tests/package_contract.rs",
    data = ["//platforms/cuda:runtime"],
    rustc_env = {
        "NML_CUDA_RUNTIME_CONTRACT_RLOCATION": "$(rlocationpath //platforms/cuda:runtime)",
    },
    deps = [
        ":nml_pjrt_cuda",
        "@rules_rust//rust/runfiles",
    ],
    target_compatible_with = select({
        "//platforms:cuda.enabled": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

# This target intentionally exposes only the compiled contract binary. Remote
# builders can populate compiler/linker outputs without assembling the
# multi-gigabyte runtime tree that belongs to the NVIDIA host's runfiles.
filegroup(
    name = "cuda_package_contract_binary",
    srcs = [":cuda_package_contract_test"],
    testonly = True,
    visibility = ["//:__pkg__"],
)

# GPU state is a host resource, not a declared file input. Run this contract
# locally on every invocation so Bazel cannot hide /dev/nvidiactl in a sandbox
# or reuse a result produced for a different device/driver state.
nml_rust_test(
    name = "cuda_runtime_contract_test",
    size = "small",
    srcs = ["tests/runtime_contract.rs"],
    crate_root = "tests/runtime_contract.rs",
    local = True,
    tags = [
        "external",
        "requires-gpu",
    ],
    data = ["//platforms/cuda:runtime"],
    env = {
        "NML_CUDA_RUNTIME_RLOCATION": "$(rlocationpath //platforms/cuda:runtime)",
    },
    deps = [
        ":nml_pjrt_cuda",
        "//crates/nml-compiler:nml_compiler",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-pjrt:nml_pjrt",
        "//crates/nml-sharding:nml_sharding",
        "//crates/nml-tensor:nml_tensor",
        "//crates/nml-types:nml_types",
        "//crates/nml-xla:nml_xla",
    ],
    target_compatible_with = select({
        "//platforms:cuda.enabled": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

filegroup(
    name = "cuda_runtime_contract_binary",
    srcs = [":cuda_runtime_contract_test"],
    testonly = True,
    visibility = ["//:__pkg__"],
)

nml_rust_test(
    name = "cuda_disabled_contract_test",
    size = "small",
    srcs = ["tests/disabled_contract.rs"],
    crate_root = "tests/disabled_contract.rs",
    deps = [":nml_pjrt_cuda"],
    target_compatible_with = select({
        "//platforms:cuda.enabled": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)
