"""Persistent logical buffers and executable ownership."""

load("//bazel:rust.bzl", "nml_rust_library", "nml_rust_test")

nml_rust_library(
    name = "nml_runtime",
    srcs = ["src/lib.rs"],
    crate_root = "src/lib.rs",
    deps = [
        "//crates/nml-compiler:nml_compiler",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-pjrt:nml_pjrt",
        "//crates/nml-sharding:nml_sharding",
        "//crates/nml-pjrt-cpu:nml_pjrt_cpu",
        "//crates/nml-tensor:nml_tensor",
        "//crates/nml-types:nml_types",
        "//crates/nml-xla:nml_xla",
    ] + select({
        "@platforms//os:linux": ["//crates/nml-pjrt-cuda:nml_pjrt_cuda"],
        "//conditions:default": [],
    }),
    visibility = ["//crates:__subpackages__"],
)

nml_rust_test(
    name = "runtime_structure_contract_test",
    srcs = ["tests/runtime_structure_contract.rs"],
    crate_root = "tests/runtime_structure_contract.rs",
    deps = [
        ":nml_runtime",
        "//crates/nml-types:nml_types",
    ],
)
