"""Logical mesh and tensor-placement contracts shared by IR and runtime."""

load("//bazel:rust.bzl", "nml_rust_library", "nml_rust_test")

nml_rust_library(
    name = "nml_sharding",
    srcs = ["src/lib.rs"],
    crate_root = "src/lib.rs",
    deps = ["//crates/nml-types:nml_types"],
    visibility = ["//crates:__subpackages__"],
)

nml_rust_test(
    name = "sharding_contract_test",
    srcs = ["tests/sharding_contract.rs"],
    crate_root = "tests/sharding_contract.rs",
    deps = [
        ":nml_sharding",
        "//crates/nml-types:nml_types",
    ],
)
