"""Host tensor storage and ZML-compatible Slice views."""

load("//bazel:rust.bzl", "nml_rust_library", "nml_rust_test")

nml_rust_library(
    name = "nml_tensor",
    srcs = ["src/lib.rs"],
    crate_root = "src/lib.rs",
    deps = ["//crates/nml-types:nml_types"],
    visibility = ["//crates:__subpackages__"],
)

nml_rust_test(
    name = "slice_contract_test",
    size = "small",
    srcs = ["tests/slice_contract.rs"],
    crate_root = "tests/slice_contract.rs",
    deps = [
        ":nml_tensor",
        "//crates/nml-types:nml_types",
    ],
)
