"""Private C ABI around the pinned IREE tokenizer runtime."""

load("//bazel:rust.bzl", "nml_rust_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_rust_bindgen//:defs.bzl", "rust_bindgen")

cc_library(
    name = "iree_tokenizer_bridge",
    srcs = ["src/bridge.c"],
    hdrs = ["include/nml_tokenizer.h"],
    includes = ["include"],
    deps = [
        "@iree//runtime/src/iree/tokenizer",
        "@iree//runtime/src/iree/tokenizer/format/huggingface:tokenizer_json",
        "@iree//runtime/src/iree/tokenizer/vocab:vocab",
    ],
)

rust_bindgen(
    name = "bindings",
    bindgen_flags = [
        "--allowlist-function=nml_iree_.*",
        "--allowlist-type=nml_iree_.*",
        "--no-doc-comments",
        "--no-layout-tests",
    ],
    cc_lib = ":iree_tokenizer_bridge",
    header = "include/nml_tokenizer.h",
    merge_cc_lib_objects_into_rlib = False,
)

nml_rust_library(
    name = "nml_tokenizer_sys",
    srcs = [":bindings"],
    crate_root = "bindings.rs",
    link_deps = [":iree_tokenizer_bridge"],
    rustc_flags = [
        "-Anon_camel_case_types",
        "-Anon_snake_case",
        "-Anon_upper_case_globals",
    ],
    visibility = ["//crates:__subpackages__"],
)
