"""Generated upb-backed XLA compiler option ABI for Rust."""

load("//bazel:rust.bzl", "nml_rust_library")
load("@com_google_protobuf//bazel:upb_c_proto_library.bzl", "upb_c_proto_library")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_rust_bindgen//:defs.bzl", "rust_bindgen")

upb_c_proto_library(
    name = "compile_options_upb",
    deps = ["@xla//xla/pjrt/proto:compile_options_proto"],
)

upb_c_proto_library(
    name = "xla_data_upb",
    deps = ["@xla//xla:xla_data_proto"],
)

cc_library(
    name = "compile_options_c",
    srcs = ["src/compile_options.c"],
    hdrs = ["include/nml_xla.h"],
    includes = ["include"],
    deps = [
        ":compile_options_upb",
        ":xla_data_upb",
    ],
)

rust_bindgen(
    name = "bindings",
    bindgen_flags = [
        "--allowlist-function=nml_xla_.*",
        "--allowlist-type=NmlXla.*",
        "--no-doc-comments",
        "--no-layout-tests",
    ],
    cc_lib = ":compile_options_c",
    header = "include/nml_xla.h",
    merge_cc_lib_objects_into_rlib = False,
)

nml_rust_library(
    name = "nml_xla_sys",
    srcs = [":bindings"],
    crate_root = "bindings.rs",
    link_deps = [":compile_options_c"],
    rustc_flags = [
        "-Anon_camel_case_types",
        "-Anon_snake_case",
        "-Anon_upper_case_globals",
    ],
    visibility = ["//crates:__subpackages__"],
)
