"""Compact public NML facade."""

load("//bazel:rust.bzl", "nml_rust_library", "nml_rust_test")

nml_rust_library(
    name = "nml",
    srcs = ["src/lib.rs"],
    crate_root = "src/lib.rs",
    deps = [
        "//crates/nml-checkpoint:nml_checkpoint",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-runtime:nml_runtime",
        "//crates/nml-tensor:nml_tensor",
        "//crates/nml-types:nml_types",
    ],
    proc_macro_deps = ["//crates/nml-derive:nml_derive"],
    visibility = ["//visibility:public"],
)

nml_rust_test(
    name = "structural_contract_test",
    srcs = ["tests/structural_contract.rs"],
    crate_root = "tests/structural_contract.rs",
    deps = [
        ":nml",
        "//crates/nml-ir:nml_ir",
        "//crates/nml-types:nml_types",
    ],
)

# The same source is compiled twice so backend selection cannot accidentally
# fork the loading, binding, or numerical contract. CUDA remains a real-device
# test and is selected only by the repository's CUDA configuration.
nml_rust_test(
    name = "linear_cpu_contract_test",
    size = "large",
    srcs = ["tests/linear_contract.rs"],
    crate_root = "tests/linear_contract.rs",
    rustc_env = {"NML_LINEAR_BACKEND": "cpu"},
    deps = [
        ":nml",
        "//crates/nml-types:nml_types",
        "@rust_crates//safetensors",
        "@rust_crates//serde_json",
    ],
)

nml_rust_test(
    name = "linear_cuda_contract_test",
    size = "large",
    srcs = ["tests/linear_contract.rs"],
    crate_root = "tests/linear_contract.rs",
    rustc_env = {"NML_LINEAR_BACKEND": "cuda"},
    tags = ["requires-gpu"],
    target_compatible_with = select({
        "//platforms:cuda.enabled": ["@platforms//os:linux"],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        ":nml",
        "//crates/nml-types:nml_types",
        "@rust_crates//safetensors",
        "@rust_crates//serde_json",
    ],
)
